# MediaServerSpeaker

./: .$Mss.drawio.bkp  .clang-format  .gitmodules  CMakeLists.txt  Mss.drawio  README.md  main.cpp  tempClient.3.toe  tempClient.4.toe
Backend/: CMakeLists.txt
Backend/Command/: ActionCommand.cpp  ActionCommand.hpp  BaseCommand.cpp  BaseCommand.hpp  CommandBuilder.hpp  CommandItem.cpp  CommandItem.hpp  ICommand.hpp
Backend/include/Command/: BaseCommand.hpp  CommandBuilder.hpp  CommandItem.hpp  ICommand.hpp
Backend/include/Midi/: MidiRoad.hpp  MidiRoadMap.hpp  ServerRoad.hpp
Backend/include/Network/: SocketList.hpp
Backend/src/Command/: BaseCommand.cpp  CommandItem.cpp
Backend/src/Midi/: MidiRoad.cpp  MidiRoadMap.cpp  ServerRoad.cpp
Backend/src/Network/: SocketList.cpp
Gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  precompile_header.hpp
Gui/Actions/: AddControlAction.cpp  AddControlAction.hpp  CMakeLists.txt  DeleteAction.cpp  DeleteAction.hpp  IAction.hpp  LoadAction.cpp  LoadAction.hpp  RenameAction.cpp  RenameAction.hpp
Gui/Components/: CMakeLists.txt  CommandComponent.cpp  CommandComponent.hpp  WidgetTransformComponent.cpp  WidgetTransformComponent.hpp
Gui/Components/include/Components/: CommandComponent.hpp  MidiComponent.hpp  WidgetTransformComponent.hpp
Gui/Components/src/: CommandComponent.cpp  MidiComponent.cpp  WidgetTransformComponent.cpp
Gui/Config/: ControlCreator.hpp  ControlsConfig.cpp  ControlsConfig.hpp
Gui/ContextMenu/: ControlContextMenu.cpp  ControlContextMenu.hpp  ScopeContextMenu.cpp  ScopeContextMenu.hpp
Gui/Controls/: BaseControl.cpp  BaseControl.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Config.cpp  Config.hpp  ContextMenu.cpp  ContextMenu.hpp  ControlCreator.hpp  IControl.hpp  ManagementButton.cpp  ManagementButton.hpp  ManagementTextableButton.cpp  ManagementTextableButton.hpp  MovableBaseControl.cpp  MovableBaseControl.hpp  QuickButton.cpp  QuickButton.hpp  QuickTitle.cpp  QuickTitle.hpp
Gui/Controls/include/Controls/: BaseControl.hpp  ManagementButton.hpp  ManagementTextableButton.hpp  MovableBaseControl.hpp  QuickButton.hpp  QuickTitle.hpp  Table.hpp  TableRow.hpp
Gui/Controls/include/Dialogs/: ControlProperty.hpp
Gui/Controls/include/Interfaces/: IControl.hpp  IMovableControl.hpp
Gui/Controls/include/Menus/: ControlContextMenu.hpp
Gui/Controls/src/Controls/: BaseControl.cpp  ManagementButton.cpp  ManagementTextableButton.cpp  MovableBaseControl.cpp  QuickButton.cpp  QuickTitle.cpp  Table.cpp  TableRow.cpp
Gui/Controls/src/Dialogs/: ControlProperty.cpp
Gui/Controls/src/Interfaces/: IControl.cpp  MovableIControl.cpp
Gui/Controls/src/Menus/: ControlContextMenu.cpp
Gui/Creators/: CMakeLists.txt
Gui/Creators/include/Creators/: ControlCreator.hpp
Gui/Dialogs/: CMakeLists.txt  ControlProperty.cpp  ControlProperty.hpp  MainWindow.cpp  MainWindow.hpp  RenamingDialog.cpp  RenamingDialog.hpp
Gui/Dialogs/include/Dialogs/: MainWindow.hpp  SettingDialog.hpp
Gui/Dialogs/include/Pages/: MidiProperty.hpp  MidiSettingsPage.hpp  NetworkSettingPage.hpp  SqlSettingsPage.hpp
Gui/Dialogs/include/Pages/KeyboardLayout/: AkaiApcButton.hpp  AkaiApcMini.hpp  ApcMini.hpp  ApcMiniButton.hpp  BaseMidiButton.hpp  BaseMidiLayout.hpp  IMidiButton.hpp
Gui/Dialogs/src/: MainWindow.cpp  SettingDialog.cpp
Gui/Dialogs/src/Pages/: MidiProperty.cpp  MidiSettingsPage.cpp  NetworkSettingPage.cpp  SqlSettingsPage.cpp
Gui/Dialogs/src/Pages/KeyboardLayout/: AkaiApcButton.cpp  AkaiApcMini.cpp  ApcMini.cpp  ApcMiniButton.cpp  BaseMidiButton.cpp  BaseMidiLayout.cpp  IMidiButton.cpp
Gui/Scopes/: CMakeLists.txt  ControlTab.cpp  ControlTab.hpp  IScope.hpp  ManagementScope.cpp  ManagementScope.hpp  QuickButtonScope.cpp  QuickButtonScope.hpp  QuickTitlesScope.cpp  QuickTitlesScope.hpp  TabPage.cpp
Gui/Scopes/include/Config/: Config.hpp
Gui/Scopes/include/Interfaces/: IScope.hpp
Gui/Scopes/include/Menus/: ScopeContextMenu.hpp
Gui/Scopes/include/Scopes/: ManagementScope.hpp  QuickButtonScope.hpp  QuickTitlesScope.hpp
Gui/Scopes/include/Tabs/: ControlTab.hpp  TabPage.hpp
Gui/Scopes/src/Interfaces/: IScope.cpp
Gui/Scopes/src/Menus/: ScopeContextMenu.cpp
Gui/Scopes/src/Scopes/: ManagementScope.cpp  QuickButtonScope.cpp  QuickTitlesScope.cpp
Gui/Scopes/src/Tabs/: ControlTab.cpp  TabPage.cpp
Gui/Style/: ButtonStyle.cpp  ButtonStyle.hpp  CMakeLists.txt  TextEditStyle.cpp  TextEditStyle.hpp  TextStyle.cpp  TextStyle.hpp  WidgetControlStyle.cpp  WidgetControlStyle.hpp  WorStyle.hpp
Gui/Style/include/Style/: ButtonStyle.hpp  LineEditStyle.hpp  TextEditStyle.hpp  WidgetControlStyle.hpp  WorStyle.hpp
Project/Hierarchy/: Files.cpp  Files.hpp
Project/Json/: JsonContentKeys.cpp  JsonContentKeys.hpp
Resources/: ControlsConfig.json
Resources/tab1/: ManagementButtons.json  ManagementScope.json  QuickButtons.json  QuickTitles.json
Src/: main.cpp
bridge/: main.cpp
docker/: compose.yaml
